# Overture

./: .gitignore  Overture.cabal
src/: Overture.hs
src/Overture/: Control.hs  Data.hs  ExportPrelude.hs  Function.hs
src/Overture/Control/: Category.hs  Functor.hs  Monad.hs
