Name:                Overture
Version:             0.3
Synopsis:            Simple Prelude replacement
Homepage:            https://github.com/isomorphism/Overture
License:             BSD3
License-file:        LICENSE
Author:              C. McCann
Maintainer:          cam@uptoisomorphism.net
Category:            Control,Data
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Hs-Source-Dirs: src
  Build-Depends: base           == 4.*
               , void           == 0.5.*
               , these          == 0.1.*
               , contravariant  == 0.1.*
               , transformers   == 0.2.*
  Exposed-modules: Overture
                 , Overture.Control
                 , Overture.Control.Category
                 , Overture.Control.Functor
                 , Overture.Control.Monad
                 , Overture.Data
                 , Overture.Function
                 , Overture.ExportPrelude
